--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "nuxt": "^3.14.1592",
+    "pinia": "^2.3.0",
+    "selenium-webdriver": "^4.27.0",
     "vue": "latest",
     "vue-router": "latest"
   },
