--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
     "puppeteer": "^23.10.4",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "vue": "latest",
     "vue-router": "latest"
   },
